# cpp-strong-types

./: README.md  meson.build
inc/: meson.build  strong_types.hpp
src/: meson.build
test/: Test_strong_types.cpp  meson.build
