testexe = executable(
    'Test_strong_types', # test executable name
    'Test_strong_types.cpp', # tests source files to be compiled
    include_directories : inc,  # declared include directories in root :code:`meson.build`
    link_with : libstrong_types) # link test executable with previously declared shared library
